--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "nodemon": "^1.3.8"
   },
   "dependencies": {
-    "express": "4.17.1"
+    "express": "^4.17.1",
+    "shortid": "^2.2.15"
   }
 }
